--- a/src/core/translations/dictionaries/en.json
+++ b/src/core/translations/dictionaries/en.json
@@ -40,6 +40,19 @@
     "field_is_invalid": "Field is invalid",
     "email_is_invalid": "Email is invalid",
     "field_must_be_selected": "Field must be selected"
+  },
+  "gdpr": {
+    "data_collected_parties": "Data collected by third parties:",
+    "one_signal": "1) \"OneSignal\" – used for application remote \"Push Notifications\". More on their privacy policy – ",
+    "device_permissions": "Device permissions that are used in application:",
+    "internet": "1) \"INTERNET\" – for internet access since application can only run on device with active internet connection.",
+    "network_state": "2) \"ACCESS_NETWORK_STATE\" – to check if current device has active internet connection.",
+    "external_storage": "3) \"WRITE_EXTERNAL_STORAGE\" –  for device storage which is needed to save temporary data to identify logged user in running application.",
+    "message": "4) \"C2D_MESSAGE\" – to get device ID for remote \"Push Notifications\".",
+    "internet_ios": "1) \"NSAppTransportSecurity\" – for internet access since application can only run on device with active internet connection.",
+    "network_state_ios": "2) \"NSLocationWhenInUseUsageDescription\" – to get current user location and show it on the map.",
+    "message_ios": "3) \"UIBackgroundModes\" – to get device ID for remote \"Push Notifications\".",
+    "disclaimer": "Unfortunately if you don't agree on application usage policy described above then you are not able to proceed using it because this policy describes features that are used for smooth operation of the application. To get our application system collected data, request for removing it or any other questions are welcome on email"
   }
 }
 
