--- a/src/core/translations/dictionaries/ru.json
+++ b/src/core/translations/dictionaries/ru.json
@@ -19,6 +19,9 @@
     "success": "Успех",
     "usage_policy": "Политика использования"
   },
+  "units": {
+    "km": "{{distance}} км"
+  },
   "buttons": {
     "back": "Назад",
     "update_settings": "Обновить настройки",
